[tool.poetry]
name = "speedboat"
version = "1.0.0"
description = "A Discord bot for managing large communities"
authors = [
    "Dj Isaac <contact@dejay.dev>"
]
license = "LICENSE.md"
readme = "README.md"
homepage = "https://docs.speedboat.rocks"
repository = "https://github.com/dejaydev/speedboat"
documentation = "https://docs.speedboat.rocks"

[tool.poetry.dependencies]
python = "^3.11"
dominantcolors = {git = "https://github.com/wenmin-wu/dominant-colors-py"}
pygal = {git = "https://github.com/rafalkucharczyk/pygal", rev = "02c10a2919457bad4c83913a90c3aa0dd0ccb83a"}
aenum = "^3.1.15"
cairosvg = "^2.7.1"
click = "^8.1.7"
datadog = "^0.48.0"
dill = "^0.3.7"
emoji = "^2.10.1"
faust-cchardet = "^2.1.19"
Flask = "^2.3.3"
gevent-inotifyx = "^0.2"
humanize = "^4.9.0"
markovify = "^0.9.4"
oauthlib = "^3.2.2"
peewee = "^3.17.0"
Pillow = "^10.3.0"
psycogreen = "^1.0.2"
psycopg2 = "^2.9.9"
pynacl = "^1.5.0"
pytz = "^2023.4"
pyyaml = "^6.0.1"
rapidfuzz = "^3.6.1"
redis = "^5.0.1"
requests-oauthlib = "^1.3.1"
sentry-sdk = "^1.40.0"
urllib3 = "^2.2.0"
wheel = "^0.42.0"
certifi = "^2024.2.2"
# i have no idea why im the person who has to require these even though redis is the one that needs them
aiohttp = "^3.9.3"
async-timeout = "^4.0.3"

# https://github.com/elderlabs/BetterDisco/tree/staging/dooley
[tool.poetry.dependencies.betterdisco-py]
rev = "69a0e4b7f418806f4e9ac89ef239da96687841fa"
git = "https://github.com/elderlabs/betterdisco"
extras = ["performance"]

[tool.poe.tasks.bot]
help = "Start the Speedbot bot"
args = [{ name = "env", required = false }]
script = "manage:bot()"

[tool.ruff]
line-length = 320 # This is the maximum for Ruff

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
